# mnist-codec

./: Cargo.toml
src/: lib.rs  main.rs
