[package]
name = "mnist-codec"
version = "0.1.0"
authors = ["drmason13 <drmason13@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.2"
anyhow = "1.0.38"
ascii = { path = "/home/masond/rust/projects/ascii", version = "0.1.0" }
image = "0.23.12"
